<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    
    <item
        android:id="@+id/nav_courses"
        android:icon="@drawable/ic_courses"
        android:title="@string/nav_courses" />
    
    <item
        android:id="@+id/nav_quizzes"
        android:icon="@drawable/ic_quiz"
        android:title="@string/nav_quizzes" />
    
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/nav_messages" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
    
</menu>